syntax = "proto3";

option go_package = "bank-grpc/pb";

message Transaction {
    uint32 to_account_number = 1;
    uint32 amount = 2;
    string message = 3;
}

message Account {
    uint32 account_number = 1;
    string account_holder_name = 2;
    uint32 balance = 3;
}

message Status {
    bool success = 1;
    string message = 2;
}

message CreateAccountRequest {
    string account_holder_name = 1;
    string password = 2;
}

message GetAccountBalanceRequest {
    uint32 account_number = 1;
    string password = 2;
}

message GetAccountBalanceResponse {
    Status status = 1;
    uint32 balance = 2;
}

message MakeTransactionRequest {
    uint32 account_number = 1;
    string password = 2;
    Transaction transaction = 3;
}

message MakeDepositMakeWithdrawRequest {
    uint32 account_number = 1;
    string password = 2;
    uint32 amount = 3;
    string message = 4;
}

service AccountService {
    rpc CreateAccount(CreateAccountRequest) returns (Status);
    rpc GetAccountBalance(GetAccountBalanceRequest) returns (GetAccountBalanceResponse);
}

service TransactionService {
    rpc MakeTransaction(MakeTransactionRequest) returns (Status);
    rpc MakeDeposit(MakeDepositMakeWithdrawRequest) returns (Status);
    rpc MakeWithdraw(MakeDepositMakeWithdrawRequest) returns (Status);
}